Fixed mobile UI for legal stuff
Fixed mobile UI for legal stuff. Fixed cookies, privacy, terms, rules pages. On mobile the navbar was too long and was outside of the screen also the cookies button was outside the screen. It is all fixed right now

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,7 @@
   html {
     color-scheme: dark;
     scroll-behavior: smooth;
+    overflow-x: hidden;
   }
   * {
     @apply border-border;
@@ -47,6 +48,7 @@
   body {
     @apply bg-background text-foreground;
     font-feature-settings: "rlig" 1, "calt" 1;
+    overflow-x: hidden;
   }
 }
 
